--- a/Rails/application/config/locales/en.yml
+++ b/Rails/application/config/locales/en.yml
@@ -1,5 +1,3 @@
-# !!! Потом перенести полный код из проекта
-
 en: #  указывает на локаль(удалять не нужно)
   # перевод названий локали для t(locale)
   en: 'English'
@@ -22,7 +20,7 @@ en: #  указывает на локаль(удалять не нужно)
       header: Edit article
 
 # Копия полного фаила из AskIt
----  # хз зачем
+---  # (?? хз зачем черточки)
 en:
   activerecord:
     attributes:
